tests/policy/phase1-schema/02-accept-statements-only.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# AC-PD1-3: CR with only spec.statements[] set (no refs) is accepted.
apiVersion: kropath.run/v1alpha1
kind: AWSPolicyDocument
metadata:
  name: structured-form
spec:
  statements:
    - sid: AllowS3Get
      effect: Allow
      principals:
        - type: AWS
          arn: "arn:aws:iam::123456789012:root"
      actions:
        - "s3:GetObject"
      resources:
        - arn: "arn:aws:s3:::example-bucket/*"
