tests/policy/phase1-schema/03-reject-both-documentjson-statements.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# AC-PD1-4: CR with both spec.documentJSON and spec.statements is rejected.
apiVersion: kropath.run/v1alpha1
kind: AWSPolicyDocument
metadata:
  name: invalid-both-forms-statements
spec:
  documentJSON: '{"Version":"2012-10-17","Statement":[]}'
  statements:
    - sid: AllowS3Get
      effect: Allow
      actions:
        - "s3:GetObject"
      resources:
        - arn: "*"
      principals:
        - type: AWS
          arn: "*"
