tests/policy/phase1-schema/04-reject-both-documentjson-sources.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# AC-PD1-5: CR with both spec.documentJSON and spec.sources is rejected.
apiVersion: aws.kropath.run/v1alpha1
kind: PolicyDocument
metadata:
  name: invalid-both-forms-sources
spec:
  documentJSON: '{"Version":"2012-10-17","Statement":[]}'
  sources:
    - name: base-policy
