tests/policy/phase1-schema/05-reject-invalid-effect.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# AC-PD1-6: Statement with effect: Invalid is rejected.
apiVersion: aws.kropath.run/v1alpha1
kind: AWSPolicyDocument
metadata:
  name: invalid-effect
spec:
  statements:
    - sid: BadEffect
      effect: Invalid
      actions:
        - "s3:GetObject"
      resources:
        - arn: "*"
